# mta-simulation

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/dgp/: default.yaml
docs/: GLOSSARY.md  Marketing_Attribution_Project_Plan.md  Marketing_Handout_Conditional_vs_Marginal.md  Methodology_00_Method_Changelog.md  Methodology_01_DGP_Design.md  Methodology_02_Attribution_Methods.md  Methodology_03_Experimental_Design.md  Methodology_04_Cost_Structure_Budget_Optimization.md  Methodology_05_Causal_Attribution_Frameworks.md  Methodology_05b_Practitioner_Summary.md  Methodology_06_DGP_Robustness.md  Methodology_07_Multivariate_Recovery.md
notebooks/part1/: 01_dgp_design_and_eda.ipynb  02_main_survival_incremental_shapley.ipynb  02_traditional_methods.ipynb  03_benchmark_traditional.ipynb  03_deep_learning_attribution.ipynb  04_benchmark_deep_learning.ipynb  04_causal_attribution.ipynb  05_benchmark_causal_baselines.ipynb  05_experiments_and_insights.ipynb  06_benchmark_comparison.ipynb  06_cost_and_budget_optimization.ipynb  07_cost_and_budget_optimization.ipynb  08_realworld_validation.ipynb  README.md
part1_simulation/: README.en.md  README.md  __init__.py  config_loader.py  notebook_setup.py
part1_simulation/dgp/: channel_config.py  conversion_model.py  cost_model.py  generate_data.py  user_segments.py
part1_simulation/evaluation/: budget_ground_truth.py  evaluate.py  (+2 more)
scripts/: patch_categorization.py  patch_notebook05_cell4.py  patch_notebook_05.py  patch_notebook_categories.py  run_dgp_robustness.py  run_du_lstm_on_dgps.py  run_multivariate_recovery.py
(+79 files in other folders)
