[project]
name = "mta-simulation"
version = "0.1.0"
description = "Marketing Attribution methodology comparison: Simulation ground truth + Criteo scale validation + Bayesian MMM Triangulation"
requires-python = ">=3.10"
dependencies = [
    # Core
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "polars>=0.20",
    # Config
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    # Statistical
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    # Deep Learning
    "torch>=2.0",
    "shap>=0.42",
    # Causal Inference
    "econml>=0.14",
    # Data I/O
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
mmm = [
    "pymc>=5.0",
    "pymc-marketing>=0.4",
]
tracking = [
    "mlflow>=2.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
